# microm

./: .gitignore  README.md  main.cpp  main.v  makefile  meson.build  microm  v.mod
loader/: minst.cpp  minst.hpp  mloader.cpp  mloader.hpp
notes/: bytecode.md  bytecode_instructions.md  instruction_set.md  lists.md  readme.md  subroutines.md
vm/: bind.v  instructions.cpp  instructions.v  mexcept.hpp  microm.hpp  mvalue.cpp  mvalue.hpp  runtime.cpp  values.hpp  vm.cpp  vm.hpp  vm.v
